# libp2p_rust_boilerplate

./: Cargo.toml  README.md  Readme.md
network/: Cargo.toml
network/src/: behaviour.rs  config.rs  error.rs  event.rs  lib.rs  message.rs  network.rs  network_test.rs  swarm_api.rs  transport.rs
network/src/message/: greeting.rs
src/: main.rs
